update locations SMB

--- a/app/Resources/views/expense/add.html.twig
+++ b/app/Resources/views/expense/add.html.twig
@@ -223,13 +223,11 @@
                     </div>
                     <div v-if="region.id == 1" class="form-group">
                         <span class="btn" v-on:click="updateTo('Haachtsesteenweg 1805, 1130 Haren')"
-                              v-bind:class="[tripData.to === 'Haachtsesteenweg 1805, 1130 Haren' ? 'btn-primary' : 'btn-light']">Verbondsgebouw</span>
-                        <span class="btn" v-on:click="updateTo('Wilgenlaan 1, 1861 Meise')"
-                              v-bind:class="[tripData.to === 'Wilgenlaan 1, 1861 Meise' ? 'btn-primary' : 'btn-light']">CM Meise</span>
-                        <span class="btn" v-on:click="updateTo('Ninoofsesteenweg 176, 1700 Dilbeek')"
-                              v-bind:class="[tripData.to === 'Ninoofsesteenweg 176, 1700 Dilbeek' ? 'btn-primary' : 'btn-light']">CM Dilbeek</span>
-                        <span class="btn" v-on:click="updateTo('Molenbos1, 1731 Asse')"
-                              v-bind:class="[tripData.to === 'Molenbos1, 1731 Asse' ? 'btn-primary' : 'btn-light']">Vertrekplaats Asse</span>
+                              v-bind:class="[tripData.to === 'Haachtsesteenweg 1805, 1130 Haren' ? 'btn-primary' : 'btn-light']">Verbondsgebouw SMB</span>
+                        <span class="btn" v-on:click="updateTo('Haachtsesteenweg 579, 1030 Schaarbeek')"
+                              v-bind:class="[tripData.to === 'Haachtsesteenweg 579, 1030 Schaarbeek' ? 'btn-primary' : 'btn-light']">Vertrekplaats Schaarbeek</span>
+                        <span class="btn" v-on:click="updateTo('Platte-lostraat 541, 3310 Kessel-Lo')"
+                              v-bind:class="[tripData.to === 'Platte-lostraat 541, 3310 Kessel-Lo' ? 'btn-primary' : 'btn-light']">Verbondsgebouw Leuven</span>
                         <span class="btn" v-on:click="updateTo('CM Mechelen Noord')"
                               v-bind:class="[tripData.to === 'CM Mechelen Noord' ? 'btn-primary' : 'btn-light']">Vertrekplaats Mechelen</span>
                         <span class="btn" v-on:click="updateTo('Nesselaerstraat, 3590 Diepenbeek')"
